--- a/style.css
+++ b/style.css
@@ -43,47 +43,47 @@ nav ul li {
 }
 
 nav ul li a {
-    position: relative;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px; 
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
 }
 
 nav ul li a::after {
-    content: '';
-    left: 0;
-    bottom: -6px;
-    width: 0;
-    height: 4px;
-    position: absolute;
-    border-radius: 5px;
-    background: linear-gradient(95deg,#bb0808,#fff);
-    transition: 0.4s;
+  content: "";
+  left: 0;
+  bottom: -6px;
+  width: 0;
+  height: 4px;
+  position: absolute;
+  border-radius: 5px;
+  background: linear-gradient(95deg, #bb0808, #fff);
+  transition: 0.4s;
 }
 
 nav ul li a:hover::after {
-    width: 100%;
+  width: 100%;
 }
 
 .header-text {
-    margin-top: 20%;
-    font-size: 30px;
+  margin-top: 20%;
+  font-size: 30px;
 }
 
 .header-text h1 {
-    font-size: 60px;
-    margin-top: 20px;
+  font-size: 60px;
+  margin-top: 20px;
 }
 
 .header-text h1 span {
-    color: #bb0808;
-    text-shadow: 3px 2px 5px #ffffff82;
+  color: #bb0808;
+  text-shadow: 3px 2px 5px #ffffff82;
 }
 
 /* -------------about------------- */
-#about{
-    padding: 80px 0;
-    color: #ababab;
+#about {
+  padding: 80px 0;
+  color: #ababab;
 }
 
 /* #about .container {
@@ -91,59 +91,74 @@ nav ul li a:hover::after {
 } */
 
 .row {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .about-col-1 {
-    flex-basis: 35%;
+  flex-basis: 35%;
 }
 
 .about-col-1 img {
-    width: 100%;
-    border-radius: 15px;
+  width: 100%;
+  border-radius: 15px;
 }
 
 .about-col-2 {
-    flex-basis: 60%;
+  flex-basis: 60%;
 }
 
 .sub-titulo {
-    font-size: 60px;
-    font-weight: 600;
-    color: #fff;
+  font-size: 60px;
+  font-weight: 600;
+  color: #fff;
 }
 
 .tab-titles {
-    display: flex;
-    margin: 20px 0 40px;
-    /* background: #ababab;
+  display: flex;
+  margin: 20px 0 40px;
+  /* background: #ababab;
     color: #080808; */
 }
 
 .tab-links {
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
 }
 
 .tab-links::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: linear-gradient(95deg,#bb0808,#fff);
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: .4s;
+  content: "";
+  width: 0;
+  height: 3px;
+  background: linear-gradient(95deg, #bb0808, #fff);
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.4s;
 }
 
 .tab-links.active-link::after {
-   width: 50%;
+  width: 50%;
 }
 
+.tab-contents ul li {
+  list-style: none;
+  margin: 10px 0;
+}
 
+.tab-contents ul li span {
+  color: #b54769;
+  font-size: 14px;
+}
 
+.tab-contents {
+  display: none;
+}
+
+.tab-contents.active-tab {
+  display: block;
+}
