--- a/style.css
+++ b/style.css
@@ -103,6 +103,12 @@ nav ul li a:hover::after {
 .about-col-1 img {
   width: 100%;
   border-radius: 15px;
+  box-shadow: 2px 2px 10px #ababab;
+  transition: 0.5s;
+}
+
+.about-col-1 img:hover {
+  transform: scale(1.05);
 }
 
 .about-col-2 {
@@ -175,16 +181,17 @@ nav ul li a:hover::after {
   margin-top: 50px;
 }
 
-.services-list div{
+.services-list div {
   background: #262626;
   padding: 40px;
   font-size: 13px;
   font-weight: 300;
   border-radius: 10px;
   transition: background 0.5s, transform 0.5s;
+  box-shadow: 2px 2px 10px #ababab;
 }
 
-.services-list div i{
+.services-list div i {
   font-size: 50px;
   margin-bottom: 30px;
 }
@@ -195,15 +202,120 @@ nav ul li a:hover::after {
   margin-bottom: 15px;
 }
 
-.services-list div a{
+.services-list div a {
+  position: relative;
   text-decoration: none;
   color: #fff;
+  background: transparent;
   font-size: 12px;
   margin-top: 20px;
+  padding: 15px 30px;
+  border-radius: 15px;
+  border: 2px solid #fff;
+  font-weight: 600;
+  width: fit-content;
   display: inline-block;
+  box-shadow: 2px 2px 10px #ababab;
+  transition: background 0.5s;
 }
 
-.services-list div:hover{
+.services-list div a:hover {
+  color: #000000;
+  border: none;
+  background: #ababab;
+  transform: translateY(10px);
+}
+
+.services-list div:hover {
   background: #bb0808;
   transform: translateY(-10px);
+}
+
+/* -------------------portfolio--------------------- */
+#portfolio {
+  padding: 50px 0;
+}
+
+.work-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 40px;
+  margin-top: 50px;
+}
+
+.work {
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 2px 2px 5px #ababab;
+}
+
+.work img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
+}
+
+.layer {
+  width: 100%;
+  height: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), #bb0808);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
+}
+
+.layer h3 {
+  font-weight: 500;
+  margin-top: 20px;
+}
+
+.layer a {
+  margin-top: 20px;
+  color: #bb0808;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 60px;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.work:hover img {
+  transform: scale(1.1);  
+}
+
+.work:hover .layer {
+  height: 100%;
+}
+
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #bb0808;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.5s;
+  box-shadow: 2px 2px 5px #ababab;
+}
+
+.btn:hover{
+  background: #bb0808;
+  transform: translateY(10px);
 }
