--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ nav ul li a:hover::after {
   width: fit-content;
   display: inline-block;
   box-shadow: 2px 2px 10px #ababab;
-  transition: background 0.5s;
+  transition: all 0.5s;
 }
 
 .services-list div a:hover {
