--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ nav ul li a:hover::after {
 }
 
 .work:hover img {
-  transform: scale(1.1);  
+  transform: scale(1.1);
 }
 
 .work:hover .layer {
@@ -315,7 +315,70 @@ nav ul li a:hover::after {
   box-shadow: 2px 2px 5px #ababab;
 }
 
-.btn:hover{
+.btn:hover {
   background: #bb0808;
   transform: translateY(10px);
+}
+
+/* ------------contato------------- */
+.contact-left {
+  flex-basis: 35%;
+}
+
+.contact-right {
+  flex-basis: 60%;
+}
+.contact-left p {
+  margin-top: 30px;
+}
+.contact-left p i {
+  color: #bb0808;
+  margin-right: 15px;
+  font-size: 25px;
+}
+.social-icons {
+  margin-top: 30px;
+}
+.social-icons a {
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #ababab;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.social-icons a:hover {
+  color: #bb0808;
+  transform: translateY(-5px);
+}
+.contact-right form {
+  width: 100%;
+}
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
+}
+form .btn2 {
+  background: #080808;
+  color: #fff;
+  cursor: pointer;
+}
+.copyright {
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
+}
+.copyright i{
+  color: #bb0808;
 }
