--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 body {
   background: #080808;
   color: #fff;
@@ -379,6 +381,73 @@ form .btn2 {
   font-weight: 300;
   margin-top: 20px;
 }
-.copyright i{
+.copyright i {
   color: #bb0808;
+}
+
+/* ------------css for small screens---------- */
+
+nav .fa {
+  display: none;
+}
+
+@media (max-width: 769px) {
+  #header {
+    background-image: linear-gradient(rgba(25, 15, 15, 0.657), rgb(17, 11, 11)),
+      url(images/phone-background.png);
+  }
+  .header-text {
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  nav .fa {
+    display: block;
+    font-size: 25px;
+  }
+  nav ul {
+    background: #bb0808;
+    position: fixed;
+    top: 0;
+    left: 0;    
+    width: 250px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: left 0.5s ease;
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fa{
+    position: absolute;
+    top: 25px;
+    left: 45px;
+    cursor: pointer;    
+  }
+  .sub-titulo{
+    font-size: 40px;
+  }
+  .about-col-1, .about-col-2{
+    flex-basis: 100%;
+  }
+  .about-col-1{
+    margin-bottom: 30px;
+  }
+  .about-col-2{
+    font-size: 14px;
+  }
+  .tab-links{
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+  .copyright{
+    font-size: 12px;
+  }
 }
